[project]
name = "quantumbpm-sdk"
version = "1.0.0"
description = "QuantumBPM Python SDK — DMN evaluation, BPMN orchestration, and external job workers."
authors = [
  {name = "QuantumBPM",email = "support@quantumbpm.com"},
]
readme = "README.md"
keywords = ["quantumbpm", "dmn", "bpmn", "workflow", "feel", "sdk"]
requires-python = ">=3.10"

dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
  "PyJWT[crypto] (>=2.8.0)",
  "simplejson (>=3.19)",
  "requests (>=2.31.0)",
]

[project.urls]
Repository = "https://github.com/QuantumBPM/quantum-python-sdk"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">= 7.2.1"
pytest-asyncio = ">= 0.23"
pytest-cov = ">= 2.8.1"
mypy = ">= 1.5"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = ["quantumbpm"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
